--- a/index.html
+++ b/index.html
@@ -1,42 +1,64 @@
 <!DOCTYPE html>
 <html lang="eng-GB">
-	
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
 	<title>Cafecito</title>
-	
+
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <header>
-<section>
-	<a href="index.html"></a>
-	<img src="images/espressobar-koffiebar-cafecito-logo.svg" alt="logo Cafecito">
-</section>
+	<button><img src=images/hamburger_icon.svg.png alt="" /></button>
+	<nav>
+		<ul>
+		  <li>Home</li>
+		  <li>About</li>
+		  <li>Roastery</li>
+		  <li>Menu</li>
+		  <li>Join Us</li>
+		  <li>B2B</li>
+		  <li>Webshop</li>
+		  <li>Loyalty Club</li>
+		  <li>Contact</li>
+		</ul>
+	  </nav>
+	<section>
+		<a href="index.html"></a>
+		<img src="images/espressobar-koffiebar-cafecito-logo.svg" alt="logo Cafecito">
+	</section>
 
 </header>
 
 <body>
-	<h1>THE BEST MOMENT OF
-		YOUR DAY</h1>
-		<h2>Coffee roasters and espressobar</h2>
-		<button>SHOP NOW</button>
-<img src="images/home-banner-2-scaled.jpg" alt="">
 
-<img src="images/amsterdam-koffie-branderij.jpg" alt="">
-<h2>CAFECITO</h2>
-<p>We are coffee roasters and espressobar Cafecito. Not just any espressobar. We love craftsmanship and finesse. When you do something do it mindfully. Do it with passion and appreciation. That is our belief.
-
-	We are here for the conscious bon vivants. People who pursue their dreams and greatly appreciate a moment of relaxation and appreciation of the small refined things.
+	<main>
+		<section>
+			<h1>THE BEST MOMENT OF
+				YOUR DAY</h1>
+			<h2>Coffee roasters and espressobar</h2>
+			<button>SHOP NOW</button>
+		</section>
 	
-	Passion makes you enjoy. Enjoy sophistication and make everything with appreciation. Then life will taste much better. Welcome to the coffee roasters and espressobar Cafecito.</p>
+		<img src="images/amsterdam-koffie-branderij.jpg" alt="">
+		<h2>CAFECITO</h2>
+		<p>We are coffee roasters and espressobar Cafecito. Not just any espressobar. We love craftsmanship and finesse.
+			When you do something do it mindfully. Do it with passion and appreciation. That is our belief.
+	
+			We are here for the conscious bon vivants. People who pursue their dreams and greatly appreciate a moment of
+			relaxation and appreciation of the small refined things.
+	
+			Passion makes you enjoy. Enjoy sophistication and make everything with appreciation. Then life will taste much
+			better. Welcome to the coffee roasters and espressobar Cafecito.</p>
+	
+		<button>Menu</button>
+	</main>
 
-	<button>Menu</button>
 	<script defer src="scripts/script.js"></script>
 </body>
-	
+
 </html>
